[tool.poetry]
name = "multicommand"
version = "0.1.0"
description = "Simple subcommand CLIs with argparse"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]
license = "MIT"

readme = "README.md"

keywords = ["cli", "commands", "subcommands", "argparse", "toole"]

homepage = "https://github.com/andrewrosss/multicommand"

classifiers = [
    "Programming Language :: Python :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
pylint = "^2.7.4"
reorder-python-imports = "^2.4.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
