[tool.poetry]
name = "multicommand"
version = "1.0.0"
description = "Simple subcommand CLIs with argparse"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]
license = "MIT"

readme = "README.md"

keywords = ["cli", "commands", "subcommands", "argparse", "tool"]

homepage = "https://github.com/andrewrosss/multicommand"
repository = "https://github.com/andrewrosss/multicommand"
documentation = "https://multicommand.vercel.app"

classifiers = [
    "Programming Language :: Python :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
reorder-python-imports = "^3.0.1"
bump2version = "^1.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
